Fix projects layout bug (bullets). Add local copy for terminal.css

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     background-color: rgb(37, 46, 46);
 }
 
+/* #content {
+    position:relative;
+  } */
+
 ul.topnav {
   /* list-style-type: none; */
   margin: 0;
